# rusty_squirrel

./: .gitignore  Cargo.toml  rustfmt.toml
rs_proc_macros/: Cargo.toml
rs_proc_macros/src/: enum_view.rs  fetch.rs  lib.rs  struct_view.rs  view_attribute.rs
src/: lib.rs  structs.rs
src/macros/: enum_u8.rs
src/structs/: database_internal.rs  database_root.rs
src/structs/db_int_helper/: mod.rs
src/traits/: get_database.rs  table.rs  taker.rs  view.rs
src/traits/collections/: collection_delete_interface.rs  collection_insert_interface.rs  collection_update_interface.rs  collection_view_interface.rs  mod.rs
src/traits/database/: database_interface.rs  get_database.rs
src/traits/db_object/: mod.rs  object_management.rs
src/traits/delete/: collection_delete_interface.rs  delete_interface.rs
src/traits/insert/: collection_insert_interface.rs  insert_interface.rs  insertable.rs
src/traits/query/: collection_query_interface.rs  query_interface.rs
src/traits/table/: mod.rs  table_create.rs  table_delete.rs  updatable.rs
src/traits/update/: collection_update_interface.rs  updatable.rs  update_interface.rs
src/traits/view/: mod.rs
tests/: test.rs
tests/helpers/: mod.rs  simple_object.rs  simpleobject.sql
