[package]
name = "rusty_squirrel"
version = "0.1.0"
authors = ["Tzian <1164336+Tzian@users.noreply.github.com>"]
edition = "2018"


[dependencies]
mysql = "21.0.2"
anyhow = "1.0.44"
# date/time(required)
chrono = { version = "0.4.19", features = ["serde"] }

rs_proc_macros = { path = "./rs_proc_macros" }
