[package]
name = "rusty_squirrel"
version = "0.1.0"
authors = ["Tzian <1164336+Tzian@users.noreply.github.com>"]
edition = "2018"


[dependencies]
mysql = { version = "21.0.2", optional = true }
anyhow = { version = "1.0.44", optional = true}
rs_proc_macros = { path = "./rs_proc_macros", optional = true }

[features]
default = ["mysql", "anyhow", "rs_proc_macros"]
macro_only = ["rs_proc_macros"]